# TLSserver

./: CMakeLists.txt  README.md
conf/: server_cfg.json
include/: cJSON.h  utils.h
keys/: cert.pem  key.pem
src/: client.c  server.c  utils.c
src/cJSON/: cJSON.c
test/: CMakeLists.txt  one_user.json  test_1.c  test_2.c  users.json
